# integrator

./: .gitignore  404.html  README.md  anomalous_table.py  cbf_files.py  environment-cuda-dev.yml  environment-cuda.yml  environment-dev.yml  environment.yml  generate_shoeboxes.py  hermite_basis_movie.html  index.html  integrate_train_.py  integrator_preds_0.refl  labels.csv  lightning_train.py  lightning_train2.py  lightning_train3.py  merging_stats.py  mgingstats.py  mkdocs.yml  model2024-08-25.py  objects.inv  outwriter_dev.py  pca_basis_movie.html  plot_peaks.py  pred.py  pred2.py  predict.py  predict.sh  process_single.py  pyproject.toml  requirements.txt  run_dials_phenix.py  sbgrid_anomalous_classification.csv  sbgrid_anomalous_detector.csv  sbgrid_anomalous_only.csv  setup.py  sim.yaml  sitemap.xml  (+15 more)
.github/workflows/: ci.yml  deploy_mkdocs.yml  doc.yml
Model/encoders/: index.html
Model/integrator/: index.html
Model/profiles/: index.html
Model/references/: index.html
bg_prior_diagnostic/: bg_prior_crude_fits.csv  bg_prior_dials_fits.csv
config/: CNNResNet_MVNProfile_config.yaml  CNNResNet_SoftmaxProfile_config.yaml  FcResNet_MVNProfile_config.yaml  FcResNet_SoftmaxProfile_config.yaml  config.yaml
configs/: amortized_merging_friedel_hewl.yaml  amortized_merging_friedel_hewl_nogb.yaml  amortized_merging_hewl.yaml  bgprior_pol_5enc_micro.yaml  conjugate_merging_hewl.yaml  difference_merging_hewl.yaml  hewl_wilson_learned_profile.yaml  hierC_wilson_conv_profile_gammaE.yaml  hierC_wilson_fixed_hermite_foldednormal.yaml  hierC_wilson_fixed_hermite_lognormal.yaml  hierC_wilson_learned_nowarm_foldednormal.yaml  hierC_wilson_learned_nowarm_gammaA.yaml  hierC_wilson_learned_nowarm_gammaA_log.yaml  hierC_wilson_learned_nowarm_gammaB.yaml  hierC_wilson_learned_nowarm_gammaB_log1p.yaml  hierC_wilson_learned_nowarm_gammaC.yaml  hierC_wilson_learned_nowarm_gammaD.yaml  hierC_wilson_learned_nowarm_gammaE.yaml  hierC_wilson_learned_nowarm_lognormal.yaml  hier_wilson.yaml  hierarchical_hermite.yaml  hierarchical_learned.yaml  hierarchical_learned_micro.yaml  hierarchical_learned_micro_coset.yaml  multinomial_spectral_5enc_micro.yaml  poly_3enc.yaml  poly_5enc.yaml  poly_5enc_micro.yaml  poly_5enc_priors.yaml  poly_hermite.yaml  poly_hermite_micro.yaml  poly_learned.yaml  poly_learned_legacy_match.yaml  poly_learned_micro.yaml  poly_learned_micro_v2.yaml  posaware_poly_5enc_micro.yaml  posaware_spectral_5enc_micro.yaml  ragged_learned.yaml  ragged_learned_micro.yaml  refinement_hewl.yaml  (+8 more)
configs/ablation/: full_hermite_init_zero.yaml  full_learned_init_zero.yaml  micro_hermite_default.yaml  micro_hermite_init.yaml  micro_hermite_init_zero.yaml  micro_hermite_zero.yaml
configs/comparison/: experiment_combinations.md  hierarchicalC_perbin_dirichlet.yaml  hierarchicalC_perbin_linear.yaml  hierarchicalC_perbin_physical.yaml  model_dataflows.md  modela_default_dirichlet.yaml  modelb_default_dirichlet.yaml  modelb_default_dirichlet_quantile.yaml  modelb_default_linear.yaml  modelb_default_physical.yaml  modelb_perbin_dirichlet_quantile.yaml  modelc_default_dirichlet.yaml  modelc_default_linear.yaml  modelc_default_physical.yaml
configs/coset_ablation/: aux.yaml  override.yaml  override_no_kl.yaml  supervised.yaml
configs/encoder_ablation/: hierarchical_3enc_gammaB.yaml  hierarchical_5enc_gammaB.yaml  poly_3enc_gammaA.yaml
configs/fixed_basis/: hierarchical_hermite_gammaA_log.yaml  hierarchical_hermite_gammaB.yaml
configs/mono/: hierarchical_hermite.yaml  hierarchical_learned.yaml  hierarchical_minimal.yaml  reference_full.yaml
configs/poly/: poly_3enc.yaml  poly_3enc_micro.yaml  poly_3enc_micro_v2.yaml  poly_5enc.yaml  poly_5enc_gammaA.yaml  poly_5enc_micro.yaml  poly_5enc_priors.yaml  poly_5enc_resnet.yaml  poly_5enc_resnet_micro.yaml  poly_5enc_resnet_priors.yaml  poly_5enc_resnet_priors_micro.yaml  poly_minimal.yaml  posaware_poly_5enc_micro.yaml  (+1 more)
docs/: dataflow_graphs.md  gamma_parameterizations.md  index.md  loss_models.md  predictive_variance.md  profile_models.md  profile_surrogate_models.md  references.md  repam_analysis.md  repam_analysis.txt  repam_gradient_proof.md
examples/: integrate.ipynb  integrate.py
examples2/: e080_001.mccd.ii  integrate.ipynb  integrate.py  pytorch_61239927.err  pytorch_61239927.out
integrator/: __init__.py
intensity_prior_diagnostic/: intensity_prior_fits.csv
post_processing/: create_config.py  run_parallel.sh  submit_jobs.sh
rotation_data_examples/: testnetwork.py  testnew.py  train_transformer.py
scripts/: add_d_to_parquet.py  add_is_test.py  add_overlap_mask.py  analyze_bbox_sizes.py  bg_prior_diagnostic.py  bounded_k_test.py  build_correlation_table.py  build_pca_basis.py  cluster_diagnostics.py  compare_pixel_distributions.py  compare_profile_bases.py  compare_stop_criteria.py  compute_log1p_stats.py  debug_ragged_train.py  diagnose_data.py  diagnose_encoder_nan.py  diagnose_merging.py  diagnose_nan.py  diagnose_training_nan.py  dirichlet_prior_bug_plots.py  eps_analysis.py  extract_merged_mtz.py  fano_gamma_comparison.py  find_hot_pixels.py  folded_normal_failure.py  folded_normal_training.py  full_pixel_scan.py  gammaA_vs_gammaB_trace.py  gamma_init_diagnostic.py  gamma_repam_diagnostics.py  gamma_vs_fano_gamma_analysis.py  generate_configs.py  generate_per_bin_data.py  generate_stop_criteria_configs.py  get_experiment_info.py  gradient_interference.py  hermite_3d_movie.py  hermite_basis_movie.py  inspect_ckpt_gamma.py  inspect_ragged_chunks.py  (+31 more)
search/: search_index.json
src/: utils.py
stylesheets/: extra.css
tests/: conftest.py  test_conjugate_integrator.py  test_core.py  test_dataloader.py  test_datamodule_2d_3d.py  test_dirichlet_parameterizations.py  test_distributions.py  test_fixed_log1p.py  test_gammaA_log_param.py  test_gammaB_init_and_warmup.py  test_integrator.py  test_logistic_normal.py  test_models.py  test_profile_surrogates.py  test_refinement.py  test_scaling.py  test_train_3d.py  test_yaml.py
training/: lightning2.py  lightning_anneal.py  lightning_real.py  slurm2.sh  training.py
(+360 files in other folders)
